examples/negative/effects_phase2/partial_handle_extern_default_masked.kai
# Issue #557 (Stage B): even when the `default { }` block bridges
# every op via `$extern_handler(...)`, an enclosing partial `handle`
# masks the main-level default — dispatch routes through the inner
# handle's evidence, whose function-pointer field for the omitted op
# is NULL because Stage A's `emit_clause_assignments` only wires
# user-declared clauses. Step 3 of the algorithm (clause-merge from
# default fires at handle) requires Stage C codegen support; until
# then the typer rejects to keep the binary safe.

effect MyLog {
  info(msg: String) : Unit
  warn(msg: String) : Unit
  default {
    info(msg, resume) -> $extern_handler("kai_default_log_info")
    warn(msg, resume) -> $extern_handler("kai_default_log_warn")
  }
}

fn main() : Int = {
  handle {
    MyLog.warn("oops")
    42
  } with MyLog {
    info(msg, resume) -> resume(())
  }
}
